Closed Bug 521818 Opened 16 years ago Closed 16 years ago

[Mac] Disabling Java on 1.9.2 doesn't destroy current plug-in instance.

Categories

(Core Graveyard :: Plug-ins, defect, P2)

1.9.2 Branch
All
macOS

Tracking

(status1.9.2 beta2-fixed)

VERIFIED FIXED
mozilla1.9.2
Tracking Status
status1.9.2 --- beta2-fixed

People

(Reporter: whimboo, Assigned: smichaud)

References

Details

(Keywords: regression, verified1.9.2)

Attachments

(2 files, 1 obsolete file)

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2b1pre) Gecko/20091011 Namoroka/3.6b1pre ID:20091011033822 When you disable Java on the following example page graphical leftovers remain on all tabs in the current browser window. This has been caused by bug 517355 and is not visible on 1.9.1. Steps: 1. Enable Java and visit http://java.sun.com/applets/jdk/1.4/demo/applets/BarChart/example1.html 2. Disable Java (and reload the page) After step 2 the bar charts are still visible and are even visible on other tabs.
Flags: blocking1.9.2?
Attached image screenshot
Those are not graphical leftovers it's the current plug-in instance itself which doesn't get destroyed.
Summary: [Mac] Graphic leftovers in all tabs when disabling Java on 1.9.2 → [Mac] Disabling Java on 1.9.2 doesn't destroy current plug-in instance.
Blocking 1.9.2+. P2.
Flags: blocking1.9.2? → blocking1.9.2+
Priority: -- → P2
Assignee: nobody → smichaud
Status: NEW → ASSIGNED
Attached patch Fix (obsolete) — Splinter Review
This bug has a really easy fix.
Attachment #406135 - Flags: review?(joshmoz)
Attached patch Better fixSplinter Review
What I've added to my rev1 patch isn't actually needed to fix this bug. But it's an elementary logical extension of the first patch.
Attachment #406135 - Attachment is obsolete: true
Attachment #406141 - Flags: review?(joshmoz)
Attachment #406135 - Flags: review?(joshmoz)
Attachment #406141 - Flags: review?(joshmoz) → review+
That build looks good on 10.5.8 and 10.6.1. Thanks Steven!
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
This fix hasn't made into 3.6 Beta 1. Is it worth having a relnote on it?
Keywords: relnote
Target Milestone: --- → mozilla1.9.2
Verified fixed with a Tinderbox hourly build: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2b2pre) Gecko/20091014 Namoroka/3.6b2pre ID:20091014120729
Status: RESOLVED → VERIFIED
Keywords: verified1.9.2
Hardware: x86 → All
Relnote added.
Keywords: relnote
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: