Bug 521818 - [Mac] Disabling Java on 1.9.2 doesn't destroy current plug-in instance. r=josh a=blocking1.9.2+